fixup! init login page

--- a/src/components/SocialConnect/styles.css
+++ b/src/components/SocialConnect/styles.css
@@ -20,6 +20,10 @@
   border-color: white !important;
 }
 
+.networkButton:focus {
+  outline: none;
+}
+
 .networkIcon {
   padding-right: 16px;
   border-right: 1px solid;
